SUBDIRS = Default_with_Analogue_Clock_Standby Default_with_Picon_and_Analogue_Clock_Standby Default_with_Picon_Fullscreen Default_with_Picon_Fullscreen_and_Analogue_Clock_Standby LCDAnalogClock_1_Standby LCDAnalogClock_2_Standby et8500_XTA_blue 

installdir = $(pkgdatadir)/display/skin_default
dist_install_DATA = *.png 

datainstalldir = $(pkgdatadir)/display
dist_datainstall_DATA = *.xml piconprev.png prev.png
