installdir = $(pkglibdir)/python/Plugins/SystemPlugins/SoftwareManager

SUBDIRS = meta

install_PYTHON =	\
	__init__.py \
	plugin.py \
	BackupRestore.py \
	ImageWizard.py \
	HD51Flash.py \
	HD51Imager.py \
	HD51MultiBoot.py \
	SoftwareTools.py

dist_install_DATA = \
	imagewizard.xml \
	installable.png \
	installed.png \
	install.png \
	noprev.png \
	remove.png \
	update.png \
	upgradeable.png \
	upgrade.png
