installdir = $(pkglibdir)/python/Plugins/SystemPlugins/VIX

SUBDIRS = images

install_PYTHON =	\
	__init__.py \
	plugin.py \
	BackupManager.py \
	H9SDmanager.py \
	ImageManager.py \
	IPKInstaller.py \
	MountManager.py \
	RestoreWizard.py \
	ScriptRunner.py \
	SoftcamManager.py \
	SwapManager.py \
	ui.py

install_DATA = \
	restorewizard.xml \
	setup.xml \
	installable.png \
	installed.png \
	install.png \
	noprev.png \
	remove.png \
	update.png \
	upgradeable.png \
	upgrade.png
